2004-12-03  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* cygwin/lily-wins.py (stat): remove old flag -p when calling lilypond.

2004-11-22  Erik Sandberg  <ersa9195@student.uu.se>

	* ly/dynamic-scripts-init.ly: Fixed typo.

2004-11-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-markup-commands.scm (fill-line): use stack-stencils
	iso. stack-stencils-line. Fixes putting centered objects into
	fill-line.

	* lily/bar-line.cc (get_staff_bar_size): backport for bar y-size
	fix.

2004-11-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/convert-ly.py (conv): backport convert-ly warnings.

2004-11-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/parser.yy:
	(re_rhythmed_music): search for first Voice with context-id. This
	fixes addlyrics-second-staff.ly
	
2004-11-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/lexer.ll: allow \encoding in lyrics as well.  Remove
	optional semicolon. (backportme)

	* VERSION: release 2.4.2
	
2004-11-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* python/GNUmakefile (STEPMAKE_TEMPLATES): Unset USER_LDFLAGS, no
	need to link to GUILE et al.

2004-11-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/lily.scm (sanitize-command-option): new function. (backportme)

	* scm/framework-tex.scm (header): sanitize TeX paper size.
	(backportme)

2004-11-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* elisp/lilypond-indent.el (LilyPond-indent-level): 2 is now standard.

	* tex/lilyponddefs.tex: If no inputencoding use latin1.  (backportme)

	* scm/framework-tex.scm (font-load-command): Use T1 if no
	font-encoding set.  (backportme)

	* scm/lily.scm (postscript->pdf): Remove .pdf file if it
	exists before converting.  (backportme)

	* scm/framework-tex.scm (convert-to-dvi): Remove .dvi file if it
	exists before converting.  (backportme)
	(convert-to-ps): Remove .ps file if it exists before
	converting.  (backportme)

	* lily/lexer.ll: Remove extra progress newline, use present tense.

	* scm/paper.scm (paper-alist): public.